[gd_scene load_steps=10 format=3 uid="uid://c1cym2lgx1tup"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_he1xx"]
[ext_resource type="Texture2D" uid="uid://brccqdkni6pwp" path="res://assets/enemy_saucer.png" id="1_hh8la"]
[ext_resource type="PackedScene" uid="uid://dlvsi5tif0uq6" path="res://scenes/enemy_paths.tscn" id="2_3cgn6"]
[ext_resource type="PackedScene" uid="uid://4pm468tffbhc" path="res://scenes/enemy_bullet.tscn" id="2_u2ab5"]
[ext_resource type="PackedScene" uid="uid://c10mc3b4gli04" path="res://scenes/explosion.tscn" id="4_7ybp8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h2jch"]

[sub_resource type="Animation" id="Animation_cavk7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_to1pi"]
resource_name = "flash"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.13, 0.17, 0.21, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fy2bo"]
_data = {
"RESET": SubResource("Animation_cavk7"),
"flash": SubResource("Animation_to1pi")
}

[node name="enemy" type="Area2D" groups=["enemies"]]
script = ExtResource("1_he1xx")
bullet_scene = ExtResource("2_u2ab5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hh8la")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3.5, 3.5)
shape = SubResource("CircleShape2D_h2jch")

[node name="EnemyPaths" parent="." instance=ExtResource("2_3cgn6")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fy2bo")
}

[node name="Explosion" parent="." instance=ExtResource("4_7ybp8")]
visible = false

[node name="GunCooldown" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GunCooldown" to="." method="_on_gun_cooldown_timeout"]
